feat: add profile_picture_url field to users & feed object
