# docs/api/swagger.json
@@ -425,6 +425,14 @@
           "x-nullable": false,
           "x-omitempty": false,
           "x-order": 5
+        },
+        "profile_picture_url": {
+          "description": "the Profile Picture URL",
+          "type": "string",
+          "format": "uri",
+          "x-nullable": false,
+          "x-omitempty": false,
+          "x-order": 6
         }
       },
       "x-nullable": true,
@@ -799,6 +807,13 @@
           "x-go-custom-tag": "binding:\"required\"",
           "x-nullable": false,
           "x-omitempty": false
+        },
+        "profile_picture_url": {
+          "description": "the Profile Picture URL",
+          "type": "string",
+          "format": "uri",
+          "x-nullable": false,
+          "x-omitempty": false
         }
       }
     },
@@ -948,13 +963,21 @@
           "x-omitempty": false,
           "x-order": 5
         },
+        "profile_picture_url": {
+          "description": "the Profile Picture URL",
+          "type": "string",
+          "format": "uri",
+          "x-nullable": false,
+          "x-omitempty": false,
+          "x-order": 6
+        },
         "location": {
           "description": "the Location",
           "type": "string",
           "x-go-custom-tag": "binding:\"required\"",
           "x-nullable": false,
           "x-omitempty": false,
-          "x-order": 6
+          "x-order": 7
         },
         "created_at": {
           "$ref": "#/definitions/createdAt"
