# internal/types/feed.go
@@ -8,8 +8,10 @@ package types
 import (
 	"context"
 
+	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
 )
 
 // Feed Feed
@@ -31,10 +33,35 @@ type Feed struct {
 
 	// the User Location
 	Location string `json:"location" binding:"required"`
+
+	// the Profile Picture URL
+	// Format: uri
+	ProfilePictureURL strfmt.URI `json:"profile_picture_url"`
 }
 
 // Validate validates this feed
 func (m *Feed) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateProfilePictureURL(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Feed) validateProfilePictureURL(formats strfmt.Registry) error {
+	if swag.IsZero(m.ProfilePictureURL) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("profile_picture_url", "body", "uri", m.ProfilePictureURL.String(), formats); err != nil {
+		return err
+	}
+
 	return nil
 }
 
